# jargo

./: Cargo.toml  README.md
src/: config.rs  deploader.rs  lib.rs  main.rs  project.rs
src/compile/: mod.rs
src/maven/: metadata.rs  mod.rs  pom.rs  pom_view.rs
src/pom/: model.rs
tests/sample_project/: Jargo.toml
tests/sample_project/src/main/java/nl/sander/sample/: Sample.java  SampleMain.java
tests/sample_project/src/test/java/nl/sander/sample/: SampleTest.java
