[package]
name = "jargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
anyhow = "1.0"
strong-xml = "0.6"
colored = "2.0"
reqwest = {version = "0.11", features = ["blocking"]}
bytes = "1.5"
home = "0.5"
sha1 = "0.10"
hex = "0.4"